feat: Establish initial security configuration, database initialization, admin functionalities, and new service layers for election results, OTP, and Telegram integration.